--- a/frontend/src/components/navigation/nav.scss
+++ b/frontend/src/components/navigation/nav.scss
@@ -1,6 +1,10 @@
 .navItem{
-  border: 1px solid;
-  border-radius: 16px;
-  font-size: 2em;
+  //border: 1px solid;
+  //border-radius: 16px;
+  font-size: 1.5em;
+}
+
+.navbar-nav {
+  //width: inherit;
 
 }
