--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -23,6 +23,10 @@ div.container{
   background-color: #626262;
 
 }
+#rootcontainer{
+  //padding: 0;
+  //margin: 0;
+}
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
