--- a/frontend/src/components/navigation/nav.scss
+++ b/frontend/src/components/navigation/nav.scss
@@ -1,10 +1,22 @@
-.navItem{
-  //border: 1px solid;
-  //border-radius: 16px;
-  font-size: 1.5em;
+.navrow {
+  width: 100%;
+  border-top: 1px solid;
 }
 
-.navbar-nav {
+nav.navbar {
   //width: inherit;
   //position: fixed;
+  //margin: 0;
+  div.container{
+    margin: 0;
+    padding: 0;
+  }
+}
+.navItem {
+  font-size: 0.8em;
+  text-align: center;
+  p{
+    color: #FACD2A;
+    margin-bottom: 0px;
+  }
 }
