added place and fetchOrders

--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -15,7 +15,8 @@ $theme-colors: (
   background-color: black;
 }
 html,body{
-  height: 100%;
+  background-color: #626262;
+  //height: 100%;
 }
 div.container{
   max-width: 500px;
