--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -1,15 +1,27 @@
 :root {
-    --color-submit-button: #FACC44;
-    --color-cancel-button: #6d6d6d;
-    --color-font-light: #fff;
+  --color-submit-button: #9CBB49;
+  --color-yellow-button: #FACC44;
+  --color-cancel-button: #6d6d6d;
+  --color-font-light: #fff;
+  --color-font-medium: #B1B1B1;
 }
 
 *,
 *::after,
 *::before {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
+@media screen and (min-width: 320px) {
+  html {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
 }
 
 // change the theme
