--- a/frontend/src/components/profile/UserInfo.css
+++ b/frontend/src/components/profile/UserInfo.css
@@ -14,13 +14,12 @@
     display: flex;
     list-style: none;
     border: 1px solid #fff;
-    margin-bottom: 15px;
-    padding: 25px;
+    margin-bottom: 1rem;
+    padding: 1.2rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     border-radius: 50px;
-    
 }
 
 .item > input {
