--- a/frontend/src/components/auth/Input.css
+++ b/frontend/src/components/auth/Input.css
@@ -14,6 +14,7 @@
     border-radius: 50px;
     background-color: transparent;
     color: var(--color-font-light);
+    min-width: 100%;
 }
 
 .form-input::placeholder {
