--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -14,8 +14,9 @@
   box-sizing: border-box;
 }
 
-html {
+html,body {
   font-size: 16px;
+
 }
 
 @media screen and (min-width: 320px) {
@@ -35,12 +36,18 @@ $theme-colors: (
 
 
 #root{
-  height: 100%;
+  min-height: 100%;
   background-color: black;
 }
+
+#rootcontainer{
+  min-height: 100vh;
+  //background-color: black;
+}
 html,body{
-  background-color: #626262;
-  //height: 100%;
+  //background-color: #626262;
+  min-height: 100%;
+  background-color: black;
 }
 
 div.container {
