--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -2,6 +2,7 @@
   --color-submit-button: #9CBB49;
   --color-yellow-button: #FACC44;
   --color-cancel-button: #6d6d6d;
+  --color-red-button: #ff8282;
   --color-font-light: #fff;
   --color-font-medium: #B1B1B1;
 }
