--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -3,8 +3,10 @@
   --color-yellow-button: #FACC44;
   --color-cancel-button: #6d6d6d;
   --color-red-button: #ff8282;
+  
   --color-font-light: #fff;
   --color-font-medium: #B1B1B1;
+  --color-font-dark: #626262;
 }
 
 *,
