moved supplierLayout to its own folder. small css changes

--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -7,6 +7,9 @@
   --color-font-light: #fff;
   --color-font-medium: #B1B1B1;
   --color-font-dark: #626262;
+
+  --color-main-background: #626262;
+  --color-nav: #626262;
 }
 
 *,
