small styling fix to the page title

--- a/frontend/src/containers/supplier/supplierLayout/SupplierLayout.css
+++ b/frontend/src/containers/supplier/supplierLayout/SupplierLayout.css
@@ -1,6 +1,5 @@
 .page-title {
-    padding: 2.5rem;
-    margin-top: 40px;
+    margin: 75px 0 30px 0;
     text-align: center;
     width: 100%;
 }
