styled most of the lists

--- a/frontend/src/components/navigation/nav.scss
+++ b/frontend/src/components/navigation/nav.scss
@@ -5,7 +5,9 @@
 
 nav.navbar {
 	padding: 0;
+    background-color: white;
     div.container {
+        margin-top: 0.5em;
         div.row {
             margin: 0;
         }
@@ -16,7 +18,7 @@ nav.navbar {
     font-size: 0.8em;
     text-align: center;
     p {
-        color: #facd2a;
+        color: #626262;
         margin-bottom: 0px;
     }
 }
