Revert "Merge branch 'stylinglists' into 'master'"
This reverts merge request !34

--- a/frontend/src/components/navigation/nav.scss
+++ b/frontend/src/components/navigation/nav.scss
@@ -5,9 +5,7 @@
 
 nav.navbar {
 	padding: 0;
-    background-color: white;
     div.container {
-        margin-top: 0.5em;
         div.row {
             margin: 0;
         }
@@ -18,7 +16,7 @@ nav.navbar {
     font-size: 0.8em;
     text-align: center;
     p {
-        color: #626262;
+        color: #facd2a;
         margin-bottom: 0px;
     }
 }
