--- a/frontend/src/containers/customer/order/orderCustomer.scss
+++ b/frontend/src/containers/customer/order/orderCustomer.scss
@@ -1,8 +1,7 @@
-button.btn {
+button {
   background-color: transparent;
-  border: none;
+  border-style: none;
 }
-
 p.supplierButtons{
   font-family: Aleo-bold,sans-serif;
   font-weight: bold;
