--- a/frontend/src/customs.scss
+++ b/frontend/src/customs.scss
@@ -60,7 +60,7 @@ $theme-colors: (
 #rootcontainer{
   min-height: 100vh;
   background-color: #FEECAD;
-  margin: 0px;
+  //margin: 0px;
   padding: 0px;
 }
 html,body{
