--- a/frontend/src/containers/supplier/catalogSupplier/Catalog.css
+++ b/frontend/src/containers/supplier/catalogSupplier/Catalog.css
@@ -1,4 +1,7 @@
 div.MuiPaper-root  {
+    max-width: 500px;
+    margin: auto;
+    max-height: 50%;
     border: 0.7rem  solid;
     border-color: transparent;
     border-radius: 1.5rem 1.5rem 0 0;
@@ -6,7 +9,11 @@ div.MuiPaper-root  {
 }
 footer.fab {
     margin-bottom: 4.5rem;
-    margin-left: 80%;
+
+}
+
+footer > div.container {
+    text-align-last: end;
 }
 
 div.sheet > button {
@@ -67,7 +74,7 @@ div.item > input {
     background-color: transparent;
     border: none;
     color: #000;
-    margin: -1px 0 -1px 5px;
+    margin: -1px 0 0.5rem 5px;
     width: 100%;
 }
 
@@ -95,7 +102,8 @@ div.item > textarea {
 select.select-category {
     color: black;
     border: none;
-    width: 100%
+    width: 100%;
+    margin-bottom: 0.5rem;
 }
 
 div.select-category:focus {
