removed onSubmit that fetches suppliersList. replaced buttons with Links

--- a/frontend/src/containers/customer/order/orderCustomer.scss
+++ b/frontend/src/containers/customer/order/orderCustomer.scss
@@ -1,7 +1,3 @@
-button {
-  background-color: transparent;
-  border-style: none;
-}
 p.supplierButtons{
   font-family: Aleo-bold,sans-serif;
   font-weight: bold;
@@ -10,4 +6,8 @@ p.supplierButtons{
 
 div.row{
   margin: 0px
+}
+
+.supplierLink {
+  text-align: center;
 }
