--- a/frontend/src/containers/customer/catalogCustomer/CatalogCustomer.css
+++ b/frontend/src/containers/customer/catalogCustomer/CatalogCustomer.css
@@ -6,3 +6,15 @@
     justify-content: space-around;
     padding-bottom: 1rem;
 }
+
+.MuiTabs-flexContainer > .on {
+    border-bottom: 1px solid green;
+
+}
+
+
+
+.MuiTab-wrapper:hover {
+    border-bottom: 1px solid green;
+}
+
