worked on suppliercatalog

--- a/frontend/src/components/list/CatalogSupplierRow/SupplierCatListView.scss
+++ b/frontend/src/components/list/CatalogSupplierRow/SupplierCatListView.scss
@@ -7,3 +7,11 @@
     font-size: 12px;
     line-height: 1.42857;
 }
+
+div.card-header{
+    padding: 0.4rem 0.4rem;
+}
+
+p.productname{
+    font-size: 22px;
+}
