--- a/frontend/src/containers/customer/chat/chat.scss
+++ b/frontend/src/containers/customer/chat/chat.scss
@@ -2,9 +2,30 @@ button.btn{
   margin: 0px
 }
 
+div.orderNrChat{
+  padding-top: 1rem;
+  position: fixed;
+  width: 100%;
+  height: 5rem;
+  background-color: var(--color-second-background);
+  border-bottom: darkgray solid 1px;
+  p {
+    font-weight: bold;
+    padding: 0.5rem 3rem;
+    background-color: white;
+    border-radius: 0.8rem;
+    border: solid 1px;
+    -webkit-box-shadow: 2px 5px 5px -1px rgba(176,176,176,1);
+    -moz-box-shadow: 2px 5px 5px -1px rgba(176,176,176,1);
+    box-shadow: 2px 5px 5px -1px rgba(176,176,176,1);
+  }
+}
+
 
 .Containerli {
-  margin-bottom: 7rem;
+  padding-top: 6rem;
+  padding-bottom: 7rem;
+  background-color: var(--color-second-background);
 }
 
 footer.messageInput{
