--- a/frontend/src/containers/supplier/catalogSupplier/Catalog.scss
+++ b/frontend/src/containers/supplier/catalogSupplier/Catalog.scss
@@ -6,14 +6,14 @@ div.MuiPaper-root  {
     border-color: transparent;
     border-radius: 1.5rem 1.5rem 0 0;
     padding: 1.2rem 1.2rem 0 1.2rem;
+
 }
 footer.fab {
     margin-bottom: 4.5rem;
 
-}
-
-footer > div.container {
+  .container{
     text-align-last: end;
+  }
 }
 
 div.sheet > button {
@@ -36,8 +36,8 @@ hr.MuiDivider-root {
     margin: 0 0 0.5em 0;
 }
 
-.fab.MuiFab-root {
-    background-color: white;
+button.MuiFab-root {
+    background-color: #9CBB49;
 }
 .fab.MuiFab-label {
     background-color: black;
