added swiping for deleting items

--- a/frontend/src/components/list/CatalogSupplierRow/SupplierCatListView.scss
+++ b/frontend/src/components/list/CatalogSupplierRow/SupplierCatListView.scss
@@ -15,3 +15,11 @@ div.card-header{
 p.productname{
     font-size: 22px;
 }
+
+.nowrap{
+    white-space: nowrap;
+}
+
+.productdescription{
+    padding: 0.5rem 0.5rem;
+}
