adding badges for notifications

--- a/frontend/src/containers/customer/chat/chat.scss
+++ b/frontend/src/containers/customer/chat/chat.scss
@@ -33,6 +33,7 @@ footer.messageInput{
   margin-bottom: 3rem;
   padding: 1rem 0;
   background-color: var(--color-second-background);
+  max-width: 500px;
   div.container{
     background-color: #FEECAD;
     max-height: 6rem;
