badges bug fixes

--- a/frontend/src/components/navigation/nav.scss
+++ b/frontend/src/components/navigation/nav.scss
@@ -25,3 +25,7 @@ nav.navbar {
         margin-bottom: 0px;
     }
 }
+span.MuiBadge-badge{
+    margin-top: 0.5rem;
+    background-color: var(--color-submit-button);
+}
