fixing small spacing errors

--- a/frontend/src/containers/supplier/catalogSupplier/Catalog.scss
+++ b/frontend/src/containers/supplier/catalogSupplier/Catalog.scss
@@ -110,6 +110,7 @@ select.select-category {
     border: none;
     width: 100%;
     margin-bottom: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 div.select-category:focus {
